Implemented basic navbar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "jsx": "react-jsx",
     "paths": {
       "@assets/*": [
-        "../*"
+        "assets/*"
       ],
       "@components/*": [
         "components/*"
