Implemented about section

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -148,7 +148,8 @@
                             "requireLast": false
                         }
                     }
-                ]
+                ],
+                "jsx-a11y/alt-text": "off"
             }
         }
     ]
