--- a/package.json
+++ b/package.json
@@ -42,17 +42,20 @@
     "@types/react-dom": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "classnames": "^2.3.1",
     "eslint-plugin-react": "^7.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/react-router-hash-link": "^2.4.5",
     "eslint": "^8.14.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.2.9",
