--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "My portfolio",
   "private": true,
+  "homepage": "https://vladimirglinskii.github.io/",
   "keywords": [
     "vladimir",
     "glinskii",
@@ -17,7 +18,9 @@
     "test": "craco  test",
     "eject": "craco  eject",
     "lint": "eslint --ext=jsx,ts,tsx src",
-    "lint:fix": "eslint --ext=jsx,ts,tsx src --fix"
+    "lint:fix": "eslint --ext=jsx,ts,tsx src --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -59,6 +62,7 @@
     "eslint": "^8.14.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.2.9",
-    "eslint-plugin-jsx-a11y": "^6.5.1"
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "gh-pages": "^3.2.3"
   }
 }
